test/sema/typeck/module/super-as-value.dora
mod inner { fn f() { super; } }

//====================
// error: `super` cannot be used as a value.
// --> super-as-value.dora:1:22
//  | mod inner { fn f() { super; } }
//                         ~~~~~
//  | 
// 1 error found.
